/*
 * $Id: ChangeLog,v 1.1364 2003/08/20 09:16:14 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-20 12:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  + contrib/hbzlib/make_vc.bat
  + contrib/hbzlib/ziparchive.vc
    + makefile for ziparchive lib for msvc compiler

2003-08-20 11:14 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/xharbour.spec
  * xharbour/make_tgz.sh
    * fixes for building without MULTI_GT support

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * next bugs fixes. Please test. I'm waiting for report.

2003-08-19 21:54 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/vm/macro.c
    + Added 2nd param to hb_macroGetType( PHB_ITEM pItem, BYTE Flags )

  * include/hbexprb.c
    + Added Macro Flags support to Type() function as a 2nd paramater so that Type is also compliant with Compile Time MAcro Flags.

  * source/rtl/type.c
    + Added Macro Flags support to Type() function as a second optional paramater.

  * source/vm/macro.c
    ! Fixed hb_compMemvarCheck() to check that Symbol found is indeed a Memvar.
      This fixes Clipper compabtibility in hb_macroGetType(), i.e. Type()
    + Added Macro Flags support to hb_macroGetType(). This allws proper type of xHarbour macro extensions,
      unless disabled with -kc.

  * source/compiler/harbour.c
  * source/compiler/hbfunchk.c
    * Revised paramater checking of Type() to allow for optional 2nd param.

2003-08-19 17:15 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * tests/inifiles.prg
    + Add parameters checking
  * tests/list.prg
  * tests/macro.prg
  * tests/pptest.prg
    ! Fixed some warning messages

2003-08-19 13:50 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/regex.c
    ! Parenthetized expressions must be returned by HB_Regex &co